Fix bugs on quarterly indicators

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
     "production_indicators = ['s' + item for item in production_country] + ['n' + item for item in production_country]\n",
     "df_production = Haver.data(production_indicators, database='emerge', dates=True)\n",
     "if type(df_production) is not dict:\n",
-    "    df_production = df_production[[item for tem in df_production.columns if item.startswith('s')]]\n",
+    "    df_production = df_production[[item for item in df_production.columns if item.startswith('s')]]\n",
     "    df_production = (df_production.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
     "    df_production.columns = [production_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_production.columns]\n",
     "elif df_production['codelists']['codesfound']:\n",
@@ -187,12 +187,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "            s922d  s922dm  s922dn  s922dvw  s922dvu  n922d  n922dm  n922dn  \\\n",
+       "1993-12-31    NaN     NaN     NaN      NaN      NaN   57.2     NaN     NaN   \n",
+       "1994-01-31    NaN     NaN     NaN      NaN      NaN   52.0     NaN     NaN   \n",
+       "1994-02-28    NaN     NaN     NaN      NaN      NaN   51.8     NaN     NaN   \n",
+       "1994-03-31    NaN     NaN     NaN      NaN      NaN   54.9     NaN     NaN   \n",
+       "1994-04-30    NaN     NaN     NaN      NaN      NaN   50.5     NaN     NaN   \n",
+       "...           ...     ...     ...      ...      ...    ...     ...     ...   \n",
+       "2020-06-30  100.9   102.7    93.1     96.5     98.6   96.3   104.4    90.4   \n",
+       "2020-07-31  101.4   106.6    92.9     99.0     99.7   99.7   108.5    93.0   \n",
+       "2020-08-31  101.8   108.7    96.9    103.4     99.2  103.2   111.2    98.0   \n",
+       "2020-09-30  101.9   107.8    97.6    104.6     99.2  104.7   113.3    98.1   \n",
+       "2020-10-31  101.9   107.4    97.3    104.6     98.5  108.7   115.8   101.1   \n",
+       "\n",
+       "            n922dvw  n922dvu  \n",
+       "1993-12-31      NaN      NaN  \n",
+       "1994-01-31      NaN      NaN  \n",
+       "1994-02-28      NaN      NaN  \n",
+       "1994-03-31      NaN      NaN  \n",
+       "1994-04-30      NaN      NaN  \n",
+       "...             ...      ...  \n",
+       "2020-06-30     97.2     73.5  \n",
+       "2020-07-31    100.0     76.0  \n",
+       "2020-08-31    105.0     77.1  \n",
+       "2020-09-30    109.1     81.7  \n",
+       "2020-10-31    110.3     99.3  \n",
+       "\n",
+       "[323 rows x 10 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>s922d</th>\n      <th>s922dm</th>\n      <th>s922dn</th>\n      <th>s922dvw</th>\n      <th>s922dvu</th>\n      <th>n922d</th>\n      <th>n922dm</th>\n      <th>n922dn</th>\n      <th>n922dvw</th>\n      <th>n922dvu</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1993-12-31</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>57.2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-01-31</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>52.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-02-28</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>51.8</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-03-31</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>54.9</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-04-30</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>50.5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-06-30</th>\n      <td>100.9</td>\n      <td>102.7</td>\n      <td>93.1</td>\n      <td>96.5</td>\n      <td>98.6</td>\n      <td>96.3</td>\n      <td>104.4</td>\n      <td>90.4</td>\n      <td>97.2</td>\n      <td>73.5</td>\n    </tr>\n    <tr>\n      <th>2020-07-31</th>\n      <td>101.4</td>\n      <td>106.6</td>\n      <td>92.9</td>\n      <td>99.0</td>\n      <td>99.7</td>\n      <td>99.7</td>\n      <td>108.5</td>\n      <td>93.0</td>\n      <td>100.0</td>\n      <td>76.0</td>\n    </tr>\n    <tr>\n      <th>2020-08-31</th>\n      <td>101.8</td>\n      <td>108.7</td>\n      <td>96.9</td>\n      <td>103.4</td>\n      <td>99.2</td>\n      <td>103.2</td>\n      <td>111.2</td>\n      <td>98.0</td>\n      <td>105.0</td>\n      <td>77.1</td>\n    </tr>\n    <tr>\n      <th>2020-09-30</th>\n      <td>101.9</td>\n      <td>107.8</td>\n      <td>97.6</td>\n      <td>104.6</td>\n      <td>99.2</td>\n      <td>104.7</td>\n      <td>113.3</td>\n      <td>98.1</td>\n      <td>109.1</td>\n      <td>81.7</td>\n    </tr>\n    <tr>\n      <th>2020-10-31</th>\n      <td>101.9</td>\n      <td>107.4</td>\n      <td>97.3</td>\n      <td>104.6</td>\n      <td>98.5</td>\n      <td>108.7</td>\n      <td>115.8</td>\n      <td>101.1</td>\n      <td>110.3</td>\n      <td>99.3</td>\n    </tr>\n  </tbody>\n</table>\n<p>323 rows × 10 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 132
+    }
+   ],
+   "source": [
+    "df_production"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 133
+    }
+   ],
+   "source": [
+    "[item for tem in df_production.columns if item.startswith('s')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Scrape data from the World Bank API (country in [] because want to access the 'RUS' row in country_codes DF, alternative to iat, etc.)\n",
-    "df_all = wb.get_dataframe(indicators=all_indicators, country=country_codes.iso_code[country], data_date=data_date, convert_date=True)\n",
+    "df_all = wb.get_dataframe(indicators=all_indicators, country=country_codes.iso_code[country], data_date=data_date, source=2, convert_date=True,)\n",
     "\n",
     "# Sort data by year # Syntax: {} = dictionary; [] = list; () = arguments for functions\n",
     "df_all = df_all.sort_index() \n",
@@ -256,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +901,7 @@
     "# p = doc.add_paragraph('Risks', style='List Number')\n",
     "\n",
     "# Save the .docx file into the local folder\n",
-    "doc.save(f'{country}-Recent-Economic-Developments.docx')"
+    "doc.save(f'Country Reports/{country}-Recent-Economic-Developments.docx')"
    ]
   }
  ],
