--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,74 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "            s922d  s922dm  s922dn  s922dvw  s922dvu  n922d  n922dm  n922dn  \\\n",
-       "1993-12-31    NaN     NaN     NaN      NaN      NaN   57.2     NaN     NaN   \n",
-       "1994-01-31    NaN     NaN     NaN      NaN      NaN   52.0     NaN     NaN   \n",
-       "1994-02-28    NaN     NaN     NaN      NaN      NaN   51.8     NaN     NaN   \n",
-       "1994-03-31    NaN     NaN     NaN      NaN      NaN   54.9     NaN     NaN   \n",
-       "1994-04-30    NaN     NaN     NaN      NaN      NaN   50.5     NaN     NaN   \n",
-       "...           ...     ...     ...      ...      ...    ...     ...     ...   \n",
-       "2020-06-30  100.9   102.7    93.1     96.5     98.6   96.3   104.4    90.4   \n",
-       "2020-07-31  101.4   106.6    92.9     99.0     99.7   99.7   108.5    93.0   \n",
-       "2020-08-31  101.8   108.7    96.9    103.4     99.2  103.2   111.2    98.0   \n",
-       "2020-09-30  101.9   107.8    97.6    104.6     99.2  104.7   113.3    98.1   \n",
-       "2020-10-31  101.9   107.4    97.3    104.6     98.5  108.7   115.8   101.1   \n",
-       "\n",
-       "            n922dvw  n922dvu  \n",
-       "1993-12-31      NaN      NaN  \n",
-       "1994-01-31      NaN      NaN  \n",
-       "1994-02-28      NaN      NaN  \n",
-       "1994-03-31      NaN      NaN  \n",
-       "1994-04-30      NaN      NaN  \n",
-       "...             ...      ...  \n",
-       "2020-06-30     97.2     73.5  \n",
-       "2020-07-31    100.0     76.0  \n",
-       "2020-08-31    105.0     77.1  \n",
-       "2020-09-30    109.1     81.7  \n",
-       "2020-10-31    110.3     99.3  \n",
-       "\n",
-       "[323 rows x 10 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>s922d</th>\n      <th>s922dm</th>\n      <th>s922dn</th>\n      <th>s922dvw</th>\n      <th>s922dvu</th>\n      <th>n922d</th>\n      <th>n922dm</th>\n      <th>n922dn</th>\n      <th>n922dvw</th>\n      <th>n922dvu</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1993-12-31</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>57.2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-01-31</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>52.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-02-28</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>51.8</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-03-31</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>54.9</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1994-04-30</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>50.5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-06-30</th>\n      <td>100.9</td>\n      <td>102.7</td>\n      <td>93.1</td>\n      <td>96.5</td>\n      <td>98.6</td>\n      <td>96.3</td>\n      <td>104.4</td>\n      <td>90.4</td>\n      <td>97.2</td>\n      <td>73.5</td>\n    </tr>\n    <tr>\n      <th>2020-07-31</th>\n      <td>101.4</td>\n      <td>106.6</td>\n      <td>92.9</td>\n      <td>99.0</td>\n      <td>99.7</td>\n      <td>99.7</td>\n      <td>108.5</td>\n      <td>93.0</td>\n      <td>100.0</td>\n      <td>76.0</td>\n    </tr>\n    <tr>\n      <th>2020-08-31</th>\n      <td>101.8</td>\n      <td>108.7</td>\n      <td>96.9</td>\n      <td>103.4</td>\n      <td>99.2</td>\n      <td>103.2</td>\n      <td>111.2</td>\n      <td>98.0</td>\n      <td>105.0</td>\n      <td>77.1</td>\n    </tr>\n    <tr>\n      <th>2020-09-30</th>\n      <td>101.9</td>\n      <td>107.8</td>\n      <td>97.6</td>\n      <td>104.6</td>\n      <td>99.2</td>\n      <td>104.7</td>\n      <td>113.3</td>\n      <td>98.1</td>\n      <td>109.1</td>\n      <td>81.7</td>\n    </tr>\n    <tr>\n      <th>2020-10-31</th>\n      <td>101.9</td>\n      <td>107.4</td>\n      <td>97.3</td>\n      <td>104.6</td>\n      <td>98.5</td>\n      <td>108.7</td>\n      <td>115.8</td>\n      <td>101.1</td>\n      <td>110.3</td>\n      <td>99.3</td>\n    </tr>\n  </tbody>\n</table>\n<p>323 rows × 10 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 132
-    }
-   ],
-   "source": [
-    "df_production"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 133
-    }
-   ],
-   "source": [
-    "[item for tem in df_production.columns if item.startswith('s')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,13 +749,13 @@
     "        p = doc.add_paragraph(f\"Industrial production {'shrank' if df_production['Industrial production'].values[-1] < 0 else 'expanded'} by {abs(df_production['Industrial production'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Industrial production'].values[-1] > df_production['Industrial production'].values[-2] else 'decrease'} from {df_production['Industrial production'].values[-2]}% growth in the previous month.\")\n",
     "    elif 'Manufacturing' in df_production.columns:\n",
     "        p = doc.add_heading(f\"Industrial output {'shrank' if df_production['Manufacturing'].values[-1] < 0 else 'expanded'}\", level=2)\n",
-    "        p = doc.add_paragraph(f\"Manufacturing {'shrank' if df_production['Manufacturing'].values[-1] < 0 else 'expanded'} by {abs(df_production['Manufacturing'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Manufacturing'].values[-1] > df_production['Manufacturing'].values[-2] else 'decrease'} from {df_production['Manufacturing'].values[-2]}% growth in the previous month.\")\n",
+    "        p = doc.add_paragraph(f\"Manufacturing {'shrank' if df_production['Manufacturing'].values[-1] < 0 else 'expanded'} by {abs(df_production['Manufacturing'].values[-1])}% year-on-year in {calendar.month_name[df_production.index[-1].month]}, a{'n increase' if df_production['Manufacturing'].values[-1] > df_production['Manufacturing'].values[-2] else ' decrease'} from {df_production['Manufacturing'].values[-2]}% growth in the previous month.\")\n",
     "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,10 +824,10 @@
     "\n",
     "# Add a paragraph on Consensus Forecasts\n",
     "p = doc.add_heading(f\"Outlook {'tilted downwards' if country_codes[country_codes.index==country].forecast_gdp_current[0].round(1) < 0 else 'favorable'} this year\")\n",
-    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}%. {'Over the same period, consumption is expected to grow by ' + str(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_con_1step[0].round(1)) +'%, while investment is projected to grow by ' + str(country_codes[country_codes.index==country].forecast_inv_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_inv_1step[0].round(1)) +'%.' if ~np.isnan(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) else ''} Industrial production is seen to grow by {country_codes[country_codes.index==country].forecast_ip_current[0].round(1)}% and {country_codes[country_codes.index==country].forecast_ip_1step[0].round(1)}%.\") \n",
+    "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}%. {'Over the same period, consumption is expected to grow by ' + str(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_con_1step[0].round(1)) +'%, while investment is projected to grow by ' + str(country_codes[country_codes.index==country].forecast_inv_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_inv_1step[0].round(1)) +'%.' if ~np.isnan(country_codes[country_codes.index==country].forecast_con_current[0].round(1)) else ''} {'Industrial production is seen to grow by ' + str(country_codes[country_codes.index==country].forecast_ip_current[0].round(1)) + '% and ' + str(country_codes[country_codes.index==country].forecast_ip_1step[0].round(1)) + '%.' if ~np.isnan(country_codes[country_codes.index==country].forecast_ip_current[0].round(1)) else ''}\") \n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
-    "p = doc.add_paragraph(f\"Meanwhile, Consensus Economics panelists foresee inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}%.\")\n",
+    "p = doc.add_paragraph(f\"Meanwhile, Consensus Economics panelists foresee inflation averaging in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}%.\")\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
     "# Add a paragraph on Risks\n",
