Fix bugs in production analysis

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,46 +148,51 @@
     "    df_production.columns = [production_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_production.columns]\n",
     "elif df_production['codelists']['codesfound']:\n",
     "    df_production = Haver.data(df_production['codelists']['codesfound'], dates=True)\n",
-    "    df_production = (df_production.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
-    "    df_production.columns = [production_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_production.columns]\n",
+    "    if len([item for item in df_production.columns if item.startswith('s')]) > 0:\n",
+    "        df_production = df_production[[item for item in df_production.columns if item.startswith('s')]]\n",
+    "        df_production = (df_production.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
+    "        df_production.columns = [production_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_production.columns]\n",
+    "    else:\n",
+    "        df_production = (df_production.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
+    "        df_production.columns = [production_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_production.columns]\n",
     "\n",
-    "cpi_codes = {'pc': 'Overall inflation', \n",
-    "             'pcf': 'Food',\n",
-    "             'pch': 'Housing, rent, water, electricity, gas & other fuels',\n",
-    "             'pct': 'Transportation',\n",
-    "             'pcc': 'Communication',\n",
-    "             'pcm': 'Health/medical care',\n",
-    "             'pcr': 'Recreation',\n",
-    "             'pce': 'Education'}\n",
-    "cpi_country = [str(country_codes.haver_code[country]) + item for item in cpi_codes]\n",
-    "cpi_indicators = ['h' + item for item in cpi_country]\n",
-    "df_cpi = Haver.data(cpi_indicators, database='emerge', dates=True)\n",
-    "if type(df_cpi) is not dict:\n",
-    "    df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
-    "    df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
-    "elif df_cpi['codelists']['codesfound']:\n",
-    "    df_cpi = Haver.data(df_cpi['codelists']['codesfound'], dates=True)\n",
-    "    df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
-    "    df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
+    "# cpi_codes = {'pc': 'Overall inflation', \n",
+    "#              'pcf': 'Food',\n",
+    "#              'pch': 'Housing, rent, water, electricity, gas & other fuels',\n",
+    "#              'pct': 'Transportation',\n",
+    "#              'pcc': 'Communication',\n",
+    "#              'pcm': 'Health/medical care',\n",
+    "#              'pcr': 'Recreation',\n",
+    "#              'pce': 'Education'}\n",
+    "# cpi_country = [str(country_codes.haver_code[country]) + item for item in cpi_codes]\n",
+    "# cpi_indicators = ['h' + item for item in cpi_country]\n",
+    "# df_cpi = Haver.data(cpi_indicators, database='emerge', dates=True)\n",
+    "# if type(df_cpi) is not dict:\n",
+    "#     df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
+    "#     df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
+    "# elif df_cpi['codelists']['codesfound']:\n",
+    "#     df_cpi = Haver.data(df_cpi['codelists']['codesfound'], dates=True)\n",
+    "#     df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
+    "#     df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
     "    \n",
-    "policyrate_monthly_codes = {'rtar': 'Policy rate (EOP, monthly, %)'}\n",
-    "policyrate_monthly_country = [str(country_codes.haver_code[country]) + item for item in policyrate_monthly_codes]\n",
-    "policyrate_monthly_indicators = ['n' + item for item in policyrate_monthly_country]\n",
-    "df_policyrate_monthly = Haver.data(policyrate_monthly_indicators, database='emerge', dates=True)\n",
-    "if type(df_policyrate_monthly) is not dict:\n",
-    "    df_policyrate_monthly.columns = [policyrate_monthly_codes[item[-4:]] for item in df_policyrate_monthly.columns]\n",
+    "# policyrate_monthly_codes = {'rtar': 'Policy rate (EOP, monthly, %)'}\n",
+    "# policyrate_monthly_country = [str(country_codes.haver_code[country]) + item for item in policyrate_monthly_codes]\n",
+    "# policyrate_monthly_indicators = ['n' + item for item in policyrate_monthly_country]\n",
+    "# df_policyrate_monthly = Haver.data(policyrate_monthly_indicators, database='emerge', dates=True)\n",
+    "# if type(df_policyrate_monthly) is not dict:\n",
+    "#     df_policyrate_monthly.columns = [policyrate_monthly_codes[item[-4:]] for item in df_policyrate_monthly.columns]\n",
     "\n",
-    "policyrate_annual_codes = {'ic': 'Policy rate (EOP, annual, %)'}\n",
-    "policyrate_annual_country = [str(country_codes.haver_code[country]) + item for item in policyrate_annual_codes]\n",
-    "policyrate_annual_indicators = ['c' + item for item in policyrate_annual_country]\n",
-    "df_policyrate_annual = Haver.data(policyrate_annual_indicators, database='ifsann', dates=True)\n",
-    "if type(df_policyrate_annual) is not dict:\n",
-    "    df_policyrate_annual.columns = [policyrate_annual_codes[item[-2:]] for item in df_policyrate_annual.columns]"
+    "# policyrate_annual_codes = {'ic': 'Policy rate (EOP, annual, %)'}\n",
+    "# policyrate_annual_country = [str(country_codes.haver_code[country]) + item for item in policyrate_annual_codes]\n",
+    "# policyrate_annual_indicators = ['c' + item for item in policyrate_annual_country]\n",
+    "# df_policyrate_annual = Haver.data(policyrate_annual_indicators, database='ifsann', dates=True)\n",
+    "# if type(df_policyrate_annual) is not dict:\n",
+    "#     df_policyrate_annual.columns = [policyrate_annual_codes[item[-2:]] for item in df_policyrate_annual.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +705,7 @@
     "        else:\n",
     "            change[f'{item}'] = random.choice(['worsened', 'declined', 'contracted'])\n",
     "    p = doc.add_heading(f\"Retail sales {'contracted' if df_retail['Retail sales index'].values[-1] < 0 else 'picked up'}\", level=2)\n",
-    "    p = doc.add_paragraph(f\"Retail sales {'contracted' if df_retail['Retail sales index'].values[-1] < 0 else 'picked up'} by {abs(df_retail['Retail sales index'].values[-1])}% year-on-year in {calendar.month_name[df_retail.index[-1].month]} of {df_retail.index[-1].year}. Growth in the retail sector {change['Retail sales index']} from a {'contraction of ' + str(abs(df_retail[f'Retail sales index'].values[-2])) + '%' if df_retail[f'Retail sales index'].values[-2] < 0 else df_retail[f'Retail sales index'].values[-2]} in {calendar.month_name[df_retail.index[-1].month - 1]}, reflecting {'increased' if df_retail[f'{item}'].values[-1] > df_retail[f'{item}'].values[-2] else 'muted'} trade activity.\")\n",
+    "    p = doc.add_paragraph(f\"Retail sales {'contracted' if df_retail['Retail sales index'].values[-1] < 0 else 'picked up'} by {abs(df_retail['Retail sales index'].values[-1])}% year-on-year in {calendar.month_name[df_retail.index[-1].month]} of {df_retail.index[-1].year}. Growth in the retail sector {change['Retail sales index']} from a{' contraction of ' + str(abs(df_retail[f'Retail sales index'].values[-2])) + '%' if df_retail[f'Retail sales index'].values[-2] < 0 else 'n expansion of ' +  str(df_retail[f'Retail sales index'].values[-2])} in {calendar.month_name[df_retail.index[-1].month - 1]}, reflecting {'increased' if df_retail[f'{item}'].values[-1] > df_retail[f'{item}'].values[-2] else 'muted'} trade activity.\")\n",
     "    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
     "if type(df_consumer) is not dict:\n",
@@ -720,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
