Add a line for sources of data

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "import numpy as np                                     \n",
     "import datetime as dt                                     \n",
     "import docx                                               \n",
-    "from docx.shared import Cm                                \n",
+    "from docx.shared import Cm       \n",
+    "from docx.shared import Pt                         \n",
     "from docx.enum.text import WD_ALIGN_PARAGRAPH             \n",
     "from matplotlib import pyplot as plt \n",
     "from matplotlib import ticker\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,12 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Scrape data from the World Bank API (country in [] because want to access the 'RUS' row in country_codes DF, alternative to iat, etc.)\n",
-    "df_all = wb.get_dataframe(indicators=all_indicators, country=country_codes.iso_code[country], data_date=data_date, source=2, convert_date=True,)\n",
+    "df_all = wb.get_dataframe(indicators=all_indicators, country=country_codes.iso_code[country], data_date=data_date, convert_date=True,)\n",
     "\n",
     "# Sort data by year # Syntax: {} = dictionary; [] = list; () = arguments for functions\n",
     "df_all = df_all.sort_index() \n",
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,6 +838,15 @@
     "\n",
     "# Add a paragraph on Risks\n",
     "# p = doc.add_paragraph('Risks', style='List Number')\n",
+    "\n",
+    "# Add a line for sources\n",
+    "p = doc.add_paragraph()\n",
+    "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
+    "run = p.add_run(f\"Sources: Consensus Economics, The World Bank, UN Comtrade, Haver Analytics, and National Sources. Accessed {dt.date.today().strftime('%d %B %Y')}.\")\n",
+    "font = run.font\n",
+    "font.size = Pt(10)\n",
+    "font.italic = True\n",
+    "\n",
     "\n",
     "# Save the .docx file into the local folder\n",
     "doc.save(f'Country Reports/{country}-Recent-Economic-Developments.docx')"
