Fix bugs on monthly inflation

--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,43 +157,43 @@
     "        df_production = (df_production.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
     "        df_production.columns = [production_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_production.columns]\n",
     "\n",
-    "# cpi_codes = {'pc': 'Overall inflation', \n",
-    "#              'pcf': 'Food',\n",
-    "#              'pch': 'Housing, rent, water, electricity, gas & other fuels',\n",
-    "#              'pct': 'Transportation',\n",
-    "#              'pcc': 'Communication',\n",
-    "#              'pcm': 'Health/medical care',\n",
-    "#              'pcr': 'Recreation',\n",
-    "#              'pce': 'Education'}\n",
-    "# cpi_country = [str(country_codes.haver_code[country]) + item for item in cpi_codes]\n",
-    "# cpi_indicators = ['h' + item for item in cpi_country]\n",
-    "# df_cpi = Haver.data(cpi_indicators, database='emerge', dates=True)\n",
-    "# if type(df_cpi) is not dict:\n",
-    "#     df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
-    "#     df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
-    "# elif df_cpi['codelists']['codesfound']:\n",
-    "#     df_cpi = Haver.data(df_cpi['codelists']['codesfound'], dates=True)\n",
-    "#     df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
-    "#     df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
+    "cpi_codes = {'pc': 'Overall inflation', \n",
+    "             'pcf': 'Food',\n",
+    "             'pch': 'Housing, rent, water, electricity, gas & other fuels',\n",
+    "             'pct': 'Transportation',\n",
+    "             'pcc': 'Communication',\n",
+    "             'pcm': 'Health/medical care',\n",
+    "             'pcr': 'Recreation',\n",
+    "             'pce': 'Education'}\n",
+    "cpi_country = [str(country_codes.haver_code[country]) + item for item in cpi_codes]\n",
+    "cpi_indicators = ['h' + item for item in cpi_country]\n",
+    "df_cpi = Haver.data(cpi_indicators, database='emerge', dates=True)\n",
+    "if type(df_cpi) is not dict:\n",
+    "    df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
+    "    df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
+    "elif df_cpi['codelists']['codesfound']:\n",
+    "    df_cpi = Haver.data(df_cpi['codelists']['codesfound'], dates=True)\n",
+    "    df_cpi = (df_cpi.pct_change(12, fill_method=None) * 100).round(1).tail(13).dropna()\n",
+    "    df_cpi.columns = [cpi_codes[''.join([i for i in (item[-3:]) if not i.isdigit()])] for item in df_cpi.columns]\n",
     "    \n",
-    "# policyrate_monthly_codes = {'rtar': 'Policy rate (EOP, monthly, %)'}\n",
-    "# policyrate_monthly_country = [str(country_codes.haver_code[country]) + item for item in policyrate_monthly_codes]\n",
-    "# policyrate_monthly_indicators = ['n' + item for item in policyrate_monthly_country]\n",
-    "# df_policyrate_monthly = Haver.data(policyrate_monthly_indicators, database='emerge', dates=True)\n",
-    "# if type(df_policyrate_monthly) is not dict:\n",
-    "#     df_policyrate_monthly.columns = [policyrate_monthly_codes[item[-4:]] for item in df_policyrate_monthly.columns]\n",
+    "policyrate_monthly_codes = {'rtar': 'Policy rate (EOP, monthly, %)'}\n",
+    "policyrate_monthly_country = [str(country_codes.haver_code[country]) + item for item in policyrate_monthly_codes]\n",
+    "policyrate_monthly_indicators = ['n' + item for item in policyrate_monthly_country]\n",
+    "df_policyrate_monthly = Haver.data(policyrate_monthly_indicators, database='emerge', dates=True)\n",
+    "if type(df_policyrate_monthly) is not dict:\n",
+    "    df_policyrate_monthly.columns = [policyrate_monthly_codes[item[-4:]] for item in df_policyrate_monthly.columns]\n",
     "\n",
-    "# policyrate_annual_codes = {'ic': 'Policy rate (EOP, annual, %)'}\n",
-    "# policyrate_annual_country = [str(country_codes.haver_code[country]) + item for item in policyrate_annual_codes]\n",
-    "# policyrate_annual_indicators = ['c' + item for item in policyrate_annual_country]\n",
-    "# df_policyrate_annual = Haver.data(policyrate_annual_indicators, database='ifsann', dates=True)\n",
-    "# if type(df_policyrate_annual) is not dict:\n",
-    "#     df_policyrate_annual.columns = [policyrate_annual_codes[item[-2:]] for item in df_policyrate_annual.columns]"
+    "policyrate_annual_codes = {'ic': 'Policy rate (EOP, annual, %)'}\n",
+    "policyrate_annual_country = [str(country_codes.haver_code[country]) + item for item in policyrate_annual_codes]\n",
+    "policyrate_annual_indicators = ['c' + item for item in policyrate_annual_country]\n",
+    "df_policyrate_annual = Haver.data(policyrate_annual_indicators, database='ifsann', dates=True)\n",
+    "if type(df_policyrate_annual) is not dict:\n",
+    "    df_policyrate_annual.columns = [policyrate_annual_codes[item[-2:]] for item in df_policyrate_annual.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
